--- a/DKW.NMEA.Tests/DKW.NMEA.Tests.csproj
+++ b/DKW.NMEA.Tests/DKW.NMEA.Tests.csproj
@@ -6,10 +6,8 @@
     <LangVersion>7.3</LangVersion>
     <RootNamespace>DNW.NMEA.Tests</RootNamespace>
     <AssemblyName>DNW.NMEA.Tests</AssemblyName>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-    <GenerateAssemblyVersionAttribute>true</GenerateAssemblyVersionAttribute>
-    <GenerateAssemblyFileVersionAttribute>true</GenerateAssemblyFileVersionAttribute>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RootNamespace>DKW</RootNamespace>
   </PropertyGroup>
