--- a/DKW.NMEA/DKW.NMEA.csproj
+++ b/DKW.NMEA/DKW.NMEA.csproj
@@ -30,6 +30,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     <PackageReference Include="System.IO.Pipelines" Version="4.5.2" />
   </ItemGroup>
 
