Added additional test data

--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -12,6 +12,11 @@
   <ItemGroup>
     <None Remove="track1.nmea" />
     <None Remove="track2.nmea" />
+    <None Remove="track3.nmea" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="track3.nmea" />
   </ItemGroup>
 
   <ItemGroup>
