--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,2 +1,7 @@
-assembly-versioning-scheme: MajorMinorPatch
+assembly-versioning-scheme: MajorMinorPatchTag
 assembly-file-versioning-scheme: MajorMinorPatchTag
+mode: Mainline
+next-version: 1.2.0
+branches: {}
+ignore:
+  sha: []
