--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,24 +1,37 @@
-install:
-  - choco install gitversion.portable -pre -y
+version: 1.2.{build}
+
+branches:
+  only:
+  - master
+
+skip_non_tags: true
+
+image: Visual Studio 2017
 
 configuration: Release
 
-assembly_info:
-  patch: false
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
 
 before_build:
-  - nuget restore
-  - ps: gitversion /l console /output buildserver /updateAssemblyInfo
+- cmd: dotnet restore
 
-build_script:
-  - cmd: dotnet build DKW.NMEA\DKW.NMEA.csproj -c %CONFIGURATION% -version "%GitVersion_NuGetVersion%"
+build:
+  publish_nuget: true
+  publish_nuget_symbols: true
+  include_nuget_references: true
+  verbosity: minimal
 
-after_build:
-  - cmd: dotnet pack DKW.NMEA\DKW.NMEA.nuspec -c %CONFIGURATION% -version "%GitVersion_NuGetVersion%"
-  
 deploy:
-  provider: NuGet
+- provider: NuGet
   api_key:
-    secure: oKBi9hZNM35lgEr9CbJA5yJHMMdNzBiC0BeTCfTVf4yQhgJ1lytVf57/dV9yk3bo
-  skip_symbols: false
+    secure: Ni6tzHcA69WMK/kiGtIgyJFm7Vo+dRXDPsC+v9wxlFxXZs3EYHndlZossBC2VJJp
   artifact: /.*\.nupkg/
+  on:
+    branch: master
